--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
-	<classpathentry kind="lib" path="/home/junaid/workspace/SQLImporter/lib/commons-csv-1.5.jar" sourcepath="lib/commons-csv-1.5-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/academy system"/>
+	<classpathentry kind="lib" path="lib/commons-csv-1.5.jar" sourcepath="lib/commons-csv-1.5-sources.jar"/>
+	<classpathentry kind="lib" path="/academy system/lib/dom4j-2.1.0.jar" sourcepath="/academy system/lib/dom4j-2.1.0-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
